--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -280,8 +280,8 @@ busuanzi:
 # Time difference between publish date and now (網頁運行時間)
 # Formal: Month/Day/Year Time or Year/Month/Day Time
 runtimeshow:
-  enable: false
-  publish_date:
+  enable: true
+  publish_date: May/12/2024 11:12:59
 
 # Aside widget - Newest Comments
 newest_comments:
