--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -1,7 +1,6 @@
-# - class_name: 友链
-#   link_list:
-#     - name: Hexo
-#       link: https://hexo.io/zh-tw/
-#       avatar: https://d33wubrfki0l68.cloudfront.net/6657ba50e702d84afb32fe846bed54fba1a77add/827ae/logo.svg
-#       descr: 快速、簡單且強大的網誌框架
-    # - name: www
+- class_name: 友链
+  link_list:
+    - name: relostaka
+      link: https://relostaka.github.io
+      avatar: https://relostaka.github.io/img/avatar.png
+      descr: 非常好re爷
